--- a/style.css
+++ b/style.css
@@ -1,547 +1,548 @@
 body {
-    background-image: url('images/bg-header.gif');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: #444948;
-    font-weight: normal;
-    font-size: 16px/24px;
-    font-family: "ProximaNovaLight", "Helvetica Neue", Helvetica, sans-serif;
-    /* font: normal 16px/24px "ProximaNovaLight", "Helvetica Neue", Helvetica, sans-serif; */
+  background-image: url("images/bg-header.gif");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #444948;
+  font-weight: normal;
+  font-size: 16px/24px;
+  font-family: "ProximaNovaLight", "Helvetica Neue", Helvetica, sans-serif;
+  /* font: normal 16px/24px "ProximaNovaLight", "Helvetica Neue", Helvetica, sans-serif; */
 }
 
 .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-height: 450px;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 450px;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .container {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    padding-right: 15px;
-    padding-left: 15px;
-    width: 100%;
-    max-width: 1200px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  width: 100%;
+  max-width: 1200px;
 }
 
 #menu {
-    position: fixed;
-    width: 100%;
-    z-index: 10;
-    transition: 0.3s ease;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+  transition: 0.3s ease;
 }
 
 #menu.bg-secondary {
-    background: rgb(14, 26, 37);
+  background: rgb(14, 26, 37);
 }
 
 ul.menu {
-    text-align: right;
+  text-align: right;
 }
 
 .menu li {
-    padding: 1rem;
-    transition: all 0.3s ease;
+  padding: 1rem;
+  transition: all 0.3s ease;
 }
 
 .menu li a {
-    color: #fafafa;
-    font-size: 1rem;
+  color: #fafafa;
+  font-size: 1rem;
 }
 
 .menu li:hover a {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .top-menu input {
-    display: none;
+  display: none;
 }
 
 @media (max-width: 600px) {
-    .menu-sm {
-        text-align: right;
-    }
+  .menu-sm {
+    text-align: right;
+  }
 
-    .top-menu {
-        display: inline-block;
-        z-index: 1;
-        -webkit-user-select: none;
-        user-select: none;
-        margin-top: 10px;
-    }
+  .top-menu {
+    display: inline-block;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
+    margin-top: 10px;
+  }
 
-    .top-menu input {
-        display: block;
-        margin: 0;
-        padding: 0;
-        width: 40px;
-        height: 30px;
-        position: absolute;
-        top: 0;
-        right: 12px;
-        cursor: pointer;
-        opacity: 0;
-        /* hide this */
-        z-index: 2;
-        /* and place it over the hamburger */
-        -webkit-touch-callout: none;
-    }
+  .top-menu input {
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 40px;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    right: 12px;
+    cursor: pointer;
+    opacity: 0;
+    /* hide this */
+    z-index: 2;
+    /* and place it over the hamburger */
+    -webkit-touch-callout: none;
+  }
 
-    .top-menu span {
-        display: block;
-        width: 33px;
-        height: 4px;
-        margin-bottom: 5px;
-        position: relative;
-        background: #cdcdcd;
-        border-radius: 3px;
-        z-index: 1;
-        transform-origin: 4px 0px;
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-            background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-            opacity 0.55s ease;
-    }
+  .top-menu span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #cdcdcd;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  }
 
+  .top-menu span:nth-last-child(2) {
+    transform-origin: 0% 0%;
+  }
 
-    .top-menu span:nth-last-child(2) {
-        transform-origin: 0% 0%;
-    }
+  .top-menu span:nth-child(4) {
+    transform-origin: 0% 100%;
+  }
 
-    .top-menu span:nth-child(4) {
-        transform-origin: 0% 100%;
-    }
+  .top-menu input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
 
-    .top-menu input:checked~span {
-        opacity: 1;
-        transform: rotate(45deg) translate(-2px, -1px);
-        background: #232323;
-    }
-
-    /*
+  /*
  * But let's hide the middle one.
  */
-    .top-menu input:checked~span:nth-child(3) {
-        opacity: 0;
-        transform: rotate(0deg) scale(0.2, 0.2);
-    }
+  .top-menu input:checked ~ span:nth-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
 
-    /*
+  /*
  * Ohyeah and the last one should go the other direction
  */
-    .top-menu input:checked~span:nth-child(4) {
-        transform: rotate(-45deg) translate(0, -1px);
-    }
+  .top-menu input:checked ~ span:nth-child(4) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
 
-    ul.menu {
-        text-align: left;
-        position: absolute;
-        background: #fafafa;
-        width: 100%;
-        max-width: 300px;
-        top: 0;
-        padding-top: 35px;
-        right: 0;
-        -webkit-font-smoothing: antialiased;
-        transform-origin: 0% 0%;
-        transform: translate(100%, 0);
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-        box-shadow: 0 3px 12px rgba(27, 31, 35, .15);
-        border: 1px solid #ddd;
-    }
+  ul.menu {
+    text-align: left;
+    position: absolute;
+    background: #fafafa;
+    width: 100%;
+    max-width: 300px;
+    top: 0;
+    padding-top: 35px;
+    right: 0;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    box-shadow: 0 3px 12px rgba(27, 31, 35, 0.15);
+    border: 1px solid #ddd;
+  }
 
-    .top-menu input:checked~.menu {
-        transform: none;
-    }
+  .top-menu input:checked ~ .menu {
+    transform: none;
+  }
 
-    .menu li {
-        display: block;
-        padding-left: 3rem;
-        padding-top: 0.5rem;
-    }
+  .menu li {
+    display: block;
+    padding-left: 3rem;
+    padding-top: 0.5rem;
+  }
 
-    .menu li a {
-        color: #232323;
-    }
+  .menu li a {
+    color: #232323;
+  }
 
-    #contact {
-        text-align: center;
-    }
+  #contact {
+    text-align: center;
+  }
 
-    .btn-contact {
-        margin: 2rem auto !important;
-    }
+  .btn-contact {
+    margin: 2rem auto !important;
+  }
 }
 
 .header {
-    min-height: 100vh;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
+  min-height: 100vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
 }
 
 .my-image {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
 }
 
 h1 {
-    margin: 2rem 0;
-    font-size: 3rem;
-    font-weight: normal;
-    text-align: center;
-    line-height: 1;
+  margin: 2rem 0;
+  font-size: 3rem;
+  font-weight: normal;
+  text-align: center;
+  line-height: 1;
 }
 
 h1 span {
-    display: block;
-    font-size: 1rem;
-    padding-top: 1rem;
-    text-transform: uppercase;
-    font-weight: normal;
+  display: block;
+  font-size: 1.5rem;
+  padding-top: 1rem;
+  font-weight: normal;
 }
 
 .btn-group {
-    width: 100%;
-    margin: 0.5rem 0;
-    text-align: center;
+  width: 100%;
+  margin: 0.5rem 0;
+  text-align: center;
 }
 
 .btn {
-    display: inline-block;
-    padding: 0.6rem 1rem;
-    border: 0;
-    border-radius: 3px;
-    width: 140px;
-    font-size: 16px;
-    margin-bottom: 8px;
-    cursor: pointer;
-    transition: all 0.2s ease;
-    line-height: 1.1;
-    background-color: #fafafa;
+  display: inline-block;
+  padding: 0.6rem 1rem;
+  border: 0;
+  border-radius: 3px;
+  width: 140px;
+  font-size: 16px;
+  margin-bottom: 8px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  line-height: 1.1;
+  background-color: #fafafa;
 }
 
 .btn-primary {
-    background: linear-gradient(120deg, #43e97b 0, #38f9d7 100%);
-    color: #fff;
-    font-weight: bold;
+  background: linear-gradient(120deg, #43e97b 0, #38f9d7 100%);
+  color: #fff;
+  font-weight: bold;
 }
 
 .btn-primary:hover {
-    background: linear-gradient(60deg, #43e97b 0, #38f9d7 100%)
+  background: linear-gradient(60deg, #43e97b 0, #38f9d7 100%);
 }
 
 ul {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 li {
-    list-style: none;
-    display: inline-block;
+  list-style: none;
+  display: inline-block;
 }
 
 .social {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
 
 #about .social {
-    margin-top: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 #about .social li {
-    margin-right: 1rem;
-    border: 1px solid #333;
-    border-radius: 50%;
+  margin-right: 1rem;
+  border: 1px solid #333;
+  border-radius: 50%;
 }
 
 .social li {
-    width: 40px;
-    height: 40px;
-    margin-right: 0.5rem;
-    transition: all 0.3s ease;
+  width: 40px;
+  height: 40px;
+  margin-right: 0.5rem;
+  transition: all 0.3s ease;
 }
 
 .social a {
-    color: rgba(255, 255, 255, 0.6);
-    fill: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.6);
+  fill: rgba(255, 255, 255, 0.6);
 }
 
 #about .social a {
-    color: rgba(0, 0, 0, 0.8);
-    fill: rgba(0, 0, 0, 0.8);
+  color: rgba(0, 0, 0, 0.8);
+  fill: rgba(0, 0, 0, 0.8);
 }
 
 .social li:hover {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .social li:hover a {
-    color: #fff;
-    fill: #fff;
+  color: #fff;
+  fill: #fff;
 }
 
 .arrow {
-    position: absolute;
-    width: 2.1rem;
-    height: 50px;
-    color: #fff;
-    fill: #fff;
-    -webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    top: 93vh;
-    animation: bounce .8s cubic-bezier(.7, 0, .3, 1) infinite alternate;
-    cursor: pointer;
+  position: absolute;
+  width: 2.1rem;
+  height: 50px;
+  color: #fff;
+  fill: #fff;
+  -webkit-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+  top: 93vh;
+  animation: bounce 0.8s cubic-bezier(0.7, 0, 0.3, 1) infinite alternate;
+  cursor: pointer;
 }
 
 .arrow svg {
-    -webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  transform: rotate(-90deg);
 }
 
 section {
-    width: 100%;
-    position: relative;
-    min-height: 350px;
+  width: 100%;
+  position: relative;
+  min-height: 350px;
 }
 
 section:not(#header) {
-    padding: 6rem 0;
+  padding: 6rem 0;
 }
 
 .animate .row {
-    animation: fadeInUp 2s;
+  animation: fadeInUp 2s;
 }
 
-section:nth-child(2n+1):not(#header) {
-    background-color: rgb(14, 26, 37);
+section:nth-child(2n + 1):not(#header) {
+  background-color: rgb(14, 26, 37);
 }
-
 
 .title {
-    color: #546a7b;
-    background-image: -webkit-gradient(linear, left top, right top, from(#43e97b), to(#38f9d7));
-    background-image: linear-gradient(to right, #43e97b 0, #38f9d7 100%);
-    font-size: 3.5rem;
-    margin: 2rem auto;
-    line-height: 1.2;
-    display: block;
-    text-transform: uppercase;
-    text-align: right;
-    width: 240px;
-    -webkit-transition: all .7s cubic-bezier(1, 0, 0, 1);
-    transition: all .7s cubic-bezier(1, 0, 0, 1);
+  color: #546a7b;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#43e97b),
+    to(#38f9d7)
+  );
+  background-image: linear-gradient(to right, #43e97b 0, #38f9d7 100%);
+  font-size: 3.5rem;
+  margin: 2rem auto;
+  line-height: 1.2;
+  display: block;
+  text-transform: uppercase;
+  text-align: right;
+  width: 240px;
+  -webkit-transition: all 0.7s cubic-bezier(1, 0, 0, 1);
+  transition: all 0.7s cubic-bezier(1, 0, 0, 1);
 }
 
 .underline-magic {
-    background-image: linear-gradient(120deg, #43e97b 0, #38f9d7 100%);
-    background-repeat: no-repeat;
-    background-size: 100% .2em;
-    background-position: 0 88%;
-    -webkit-transition: background-size .25s ease-in;
-    transition: background-size .25s ease-in;
+  background-image: linear-gradient(120deg, #43e97b 0, #38f9d7 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 88%;
+  -webkit-transition: background-size 0.25s ease-in;
+  transition: background-size 0.25s ease-in;
 }
 
 .underline-magic:hover {
-    background-size: 100% 75%;
+  background-size: 100% 75%;
 }
 
 .title2 {
-    font-size: 30px;
-    margin: 0px;
-    margin-bottom: 1rem;
-    color: #333;
+  font-size: 30px;
+  margin: 0px;
+  margin-bottom: 1rem;
+  color: #333;
 }
 
 .description {
-    line-height: 1.6;
-    font-size: 18px;
+  line-height: 1.6;
+  font-size: 18px;
 }
 
 .progress-bar {
-    display: block;
-    margin-bottom: 1.5rem;
-    position: relative;
+  display: block;
+  margin-bottom: 1.5rem;
+  position: relative;
 }
 
 .progress-bar-title {
-    font-size: 1.5rem;
-    font-weight: normal;
-    color: #fff;
-    margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: normal;
+  color: #fff;
+  margin-bottom: 0.5rem;
 }
 
 .progress-bar-container {
-    display: block;
-    width: 100%;
-    height: 5px;
-    background: rgb(66, 72, 78);
-    border-radius: 5px;
-    position: relative;
+  display: block;
+  width: 100%;
+  height: 5px;
+  background: rgb(66, 72, 78);
+  border-radius: 5px;
+  position: relative;
 }
 
 .progress-bar-progress {
-    position: absolute;
-    width: 0%;
-    height: 100%;
-    border-radius: 5px;
-    -webkit-animation-duration: 2s;
-    animation-duration: 2s;
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
+  position: absolute;
+  width: 0%;
+  height: 100%;
+  border-radius: 5px;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-timing-function: ease-out;
+  animation-timing-function: ease-out;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .progressed {
-    background-image: linear-gradient(120deg, #43e97b 0, #38f9d7 100%);
+  background-image: linear-gradient(120deg, #43e97b 0, #38f9d7 100%);
 }
 
 .progress-bar-percent {
-    content: " ";
-    position: absolute;
-    background: #fafafa;
-    left: 100%;
-    top: 0px;
-    width: 40px;
-    height: 25px;
-    text-align: center;
+  content: " ";
+  position: absolute;
+  background: #fafafa;
+  left: 100%;
+  top: 0px;
+  width: 40px;
+  height: 25px;
+  text-align: center;
 }
 
 .progress-bar-percent::after {
-    content: " ";
-    display: block;
-    border: 10px solid transparent;
-    border-top-color: #fafafa;
-    position: absolute;
-    left: 10px;
+  content: " ";
+  display: block;
+  border: 10px solid transparent;
+  border-top-color: #fafafa;
+  position: absolute;
+  left: 10px;
 }
 
 .animate #progress-dotnet {
-    -webkit-animation-name: progress-dotnet;
-    animation-name: progress-dotnet;
-    -webkit-animation-delay: .7s;
-    animation-delay: .7s;
+  -webkit-animation-name: progress-dotnet;
+  animation-name: progress-dotnet;
+  -webkit-animation-delay: 0.7s;
+  animation-delay: 0.7s;
 }
 
 .animate #progress-html {
-    -webkit-animation-name: progress-html;
-    animation-name: progress-html;
-    -webkit-animation-delay: 1.4s;
-    animation-delay: 1.4s;
+  -webkit-animation-name: progress-html;
+  animation-name: progress-html;
+  -webkit-animation-delay: 1.4s;
+  animation-delay: 1.4s;
 }
 
 .animate #progress-css {
-    -webkit-animation-name: progress-css;
-    animation-name: progress-css;
-    -webkit-animation-delay: 2.1s;
-    animation-delay: 2.1s;
+  -webkit-animation-name: progress-css;
+  animation-name: progress-css;
+  -webkit-animation-delay: 2.1s;
+  animation-delay: 2.1s;
 }
 
 .animate #progress-js {
-    -webkit-animation-name: progress-js;
-    animation-name: progress-js;
-    -webkit-animation-delay: 2.8s;
-    animation-delay: 2.8s;
+  -webkit-animation-name: progress-js;
+  animation-name: progress-js;
+  -webkit-animation-delay: 2.8s;
+  animation-delay: 2.8s;
 }
 
 .animate #progress-angular {
-    -webkit-animation-name: progress-angular;
-    animation-name: progress-angular;
-    -webkit-animation-delay: 3.5s;
-    animation-delay: 3.5s;
+  -webkit-animation-name: progress-angular;
+  animation-name: progress-angular;
+  -webkit-animation-delay: 3.5s;
+  animation-delay: 3.5s;
 }
 
 /* Start Portfolio */
 h3 {
-    margin-top: 0;
-    font-weight: normal;
-    font-size: 24px;
+  margin-top: 0;
+  font-weight: normal;
+  font-size: 24px;
 }
 
 #portfolio {
-    position: relative;
+  position: relative;
 }
 
 #portfolio img {
-    width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 
-
 .project {
-    position: relative;
-    color: #fff;
-    margin: 0.5rem 0;
-    border: 1px solid #ddd;
+  position: relative;
+  color: #fff;
+  margin: 0.5rem 0;
+  border: 1px solid #ddd;
 }
 
 .project .details {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    opacity: 0;
-    transition: all 0.3s ease;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .project:hover .details {
-    opacity: 1;
+  opacity: 1;
 }
 
 .project .details span {
-    font-size: 3rem;
-    display: block;
+  font-size: 3rem;
+  display: block;
 }
 
 .project .details a {
-    font-size: 1.3rem;
-    text-decoration: underline;
-    color: #fafafa;
+  font-size: 1.3rem;
+  text-decoration: underline;
+  color: #fafafa;
 }
 
 .project:hover .details a {
-    animation: fadeIn 1.5s ease;
+  animation: fadeIn 1.5s ease;
 }
 
 .project:hover .details span {
-    animation: fadeInLeft 0.7s ease;
+  animation: fadeInLeft 0.7s ease;
 }
 
 #contact span {
-    display: block;
-    color: #fafafa;
-    font-weight: normal;
-    font-size: 1rem;
-    line-height: 2;
+  display: block;
+  color: #fafafa;
+  font-weight: normal;
+  font-size: 1rem;
+  line-height: 2;
 }
 
 #contact b {
-    color: #fff;
+  color: #fff;
 }
 
 .btn-contact {
-    font-size: 1.3rem;
-    margin: 1rem 0;
-    padding: 0.5rem 0.8rem;
-    background: #fafafa;
-    border-radius: 3px;
-    display: block;
-    width: 150px;
-    text-align: center;
+  font-size: 1.3rem;
+  margin: 1rem 0;
+  padding: 0.5rem 0.8rem;
+  background: #fafafa;
+  border-radius: 3px;
+  display: block;
+  width: 150px;
+  text-align: center;
 }
